(feature/ST-74-export-options-for-nemo-ready-file-.csv): added demo and corrected the alignment issue for drop down menu

--- a/src/components/export-urls/export-urls.less
+++ b/src/components/export-urls/export-urls.less
@@ -1,15 +1,5 @@
+//leaving this class in here,my next PR has code that gets added up to this file. 
 seo-export-urls {
-    pui-action-bar-menu > ul.nav-icons.nav-icons-right > pui-action-bar-dropdown:last-child .dropdown-menu.bottom > .arrow {
-        left: 82%;
-    }
 
-    pui-action-bar-menu {
-        pui-action-bar-dropdown {
-            pui-action-bar-item {
-                > li {
-                    white-space: nowrap;
-                }
-            }
-        }
-    }
 }
+
